--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Page Title</title>
+        <title>Choong Sin Fatt</title>
         <link rel="stylesheet" href="styles.css">
         <link rel="shortcut icon" type="image/jpg" href="images/logo.png"/>
         <style>
